# haskellbook

./: .gitignore  README.md  haskellbook.cabal
exe/: Main.hs
src/: Main.hs  Sing.hs  TypeKwonDo.hs
src/Ch14/: Addition.hs  Main.hs  Morse.hs
src/Ch15/: NonEmpty.hs  OptionalMonoid.hs  OrphanInstances.hs
src/Ch16/: BeKind.hs  DetermineValidFunctors.hs  FunctorInstance.hs  HeavyLifting.hs  RearrangeArguments.hs
src/Ch17/: ConstantInstance.hs  FixerUpper.hs  IdentityInstance.hs  Lookup.hs  SpecializeTheMethods.hs
src/ch02/: EquivalentExpressions.hs  Exercices.hs  MoreFunWithFunctions.hs  Parenthesization.hs
src/ch03/: BuildingFunctions.hs  Exercises.hs  ReadingSyntax.hs
src/ch06/: Exercises.hs
src/ch07/: Exercises.hs
src/ch08/: ApplyTimes.hs  Exercises.hs  Recursion.hs  ReviewOfCurrying.hs  ReviewOfTypes.hs
src/ch09/: BottomMadness.hs  Ciphers.hs  ComprehendThyLists.hs  Data.Char.hs  Data.Chars.hs  EnumFromTo.hs  Exercises.hs  Filtering.hs  MoreBottoms.hs  NormalForm.hs  StandardFunctions.hs  ThyFearfulSymmetry.hs  Zipping.hs
src/ch10/: DatabaseProcessing.hs  RewritingFunctionsUsingFolds.hs  Scans.hs  UnderstandingFolds.hs  WarmUpAndReview.hs
src/ch11/: AsPatterns.hs  BinaryTree.hs  Cardinality.hs  Cihpers.hs  Ciphers.hs  DogTypes.hs  ForExample.hs  HowDoesYourGardenGrow.hs  HuttonsRazor.hs  LogicGoats.hs  MultipleChoice.hs  PhoneExercise.hs  ProductTypes.hs  Programmers.hs  SumTypes.hs  TheQuad.hs  Vehicles.hs
src/ch12/: BinaryTree.hs  DetermineTheKinds.hs  ItsOnlyNatural.hs  SmallLibraryForEither.hs  SmallLibraryForMaybe.hs  StringProcessing.hs  Unfolds.hs  ValidateTheWord.hs
src/ch13/: CheckYourUnderstanding.hs  Ciphers.hs  DogsRule.hs  Hangman.hs  Hello.hs  ModifyingCode.hs
src/random/: Notes.hs
test/: Spec.hs
test/Ch14/: GenRandomGenerator.hs  HangmanTesting.hs  Idempotence.hs  UsingQuickCheck.hs  ValidatingCiphers.hs  WordNumberTest.hs
test/Ch15/: MaybeAnotherMonoid.hs  Monoid.hs  Semigroup.hs  TestingQuickChecksPatience.hs
test/Ch16/: FunctorProp.hs  InstancesOfFunc.hs  Possibly.hs  ShortExercise.hs
test/Ch17/: BadMonoid.hs  ListApplicative.hs  ValidateTheInstances.hs  (+1 more)
