name:               haskellbook
version:            0.1.0.0
synopsis:           My solutions to the exercises in www.haskellbook.com
description:        Please see README.md
homepage:           https://github.com/p1xelHer0/haskellbook
author:             Pontus Nagy
maintainer:         pontusnagy@gmail.com
copyright:          2018 Pontus Nagy
category:           Education
build-type:         Simple
extra-source-files: README.md
                  , data/dict.txt
cabal-version:      >=1.10

executable haskellbook
  hs-source-dirs:   exe
  main-is:          Main.hs
  build-depends:    base
                  , directory
                  , containers
                  , haskellbook
  default-language: Haskell2010

library
  hs-source-dirs:   src
  exposed-modules:  Ch08.Recursion
                  , Ch11.AsPatterns
                  , Ch13.DogsRule
                  , Ch13.Hello
                  , Ch13.Ciphers
                  , Ch13.Hangman
                  , Ch14.Morse
                  , Ch15.OptionalMonoid
  build-depends:    base
                  , containers
                  , random
                  , split
  default-language: Haskell2010

test-suite test
  ghc-options:      -Wall -fno-warn-orphans
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:    Ch14.WordNumberTest
                  , Ch14.UsingQuickCheck
                  , Ch14.Idempotence
                  , Ch14.GenRandomGenerator
                  , Ch14.HangmanTesting
                  , Ch14.ValidatingCiphers
                  , Ch15.TestingQuickChecksPatience
                  , Ch15.MaybeAnotherMonoid
                  , Ch15.Semigroup
                  , Ch15.Monoid
                  , Ch16.FunctorProp
                  , Ch16.InstancesOfFunc
                  , Ch16.Possibly
                  , Ch16.ShortExercise
  build-depends:    base
                  , haskellbook
                  , hspec
                  , QuickCheck
  default-language: Haskell2010
